--- a/.github/workflows/broadcast-schema.yml
+++ b/.github/workflows/broadcast-schema.yml
@@ -99,6 +99,9 @@ jobs:
               p.dependencies = p.dependencies || {};
               p.dependencies['next-swagger-doc'] = '^0.4.0';
               p.dependencies['wait-on'] = '^7.2.0';
+              // Remove invalid npm packages (schemathesis is Python, not npm)
+              delete p.dependencies['schemathesis'];
+              delete p.devDependencies['schemathesis'];
               fs.writeFileSync('package.json', JSON.stringify(p, null, 2) + '\n');
             "
           fi
